fix: Drop redundant overflow: auto
Closes #85.

--- a/styles/components/_blockquote.scss
+++ b/styles/components/_blockquote.scss
@@ -6,15 +6,13 @@ blockquote {
   padding: 0.5em;
   margin-bottom: 1em;
 
-  border: 1px solid rgba(0,0,0,0.03);
+  border: 1px solid rgba(0, 0, 0, 0.03);
 
   font-family: sans-serif;
   font-style: inherit;
   font-size: 80%;
 
   border-radius: 7px;
-
-  overflow: auto;
 
   code {
     color: black;
@@ -28,7 +26,7 @@ blockquote {
     color: #696969;
 
     font-size: medium;
-    background-color: #F5FFFB;
+    background-color: #f5fffb;
     padding: 1em;
     margin-bottom: 1em;
   }
@@ -37,7 +35,7 @@ blockquote {
     color: #696969;
 
     font-size: medium;
-    background-color: #FFFFFA;
+    background-color: #fffffa;
     padding: 1em;
     margin-bottom: 1em;
   }
